Add Listener MemShell exp, Servlet MemShell exp, Valve MemShell exp, and jsp format MemShell for each exp.